--- a/src/main/resources/static/css/404.css
+++ b/src/main/resources/static/css/404.css
@@ -40,7 +40,7 @@ a:hover { text-decoration: underline }
 .clear:after { clear: both }
 .clear { zoom: 1 }
 body {
-    background: #dfdfdf url(static/images/bg_noise.jpg) repeat;
+    background: #dfdfdf url(../../static/images/bg_noise.jpg) repeat;
     font-family: Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     overflow: hidden;
