--- a/src/main/resources/static/css/notification.css
+++ b/src/main/resources/static/css/notification.css
@@ -1,3 +1,7 @@
+/*******************************************************************************
+ * Copyright (c) 2016 by LiuFa. All rights reserved
+ ******************************************************************************/
+
 #instructions ul li {
     list-style-type: disc;
     list-style-position: outside;
