--- a/src/main/resources/static/dev/indexpage/css/responsive.css
+++ b/src/main/resources/static/dev/indexpage/css/responsive.css
@@ -38,67 +38,67 @@ px      68    160    252    344    436    528    620    712    */
     width: 95%;
   }
   /*--
-    blog Start
+    project Start
 --*/
-  #blog .block {
+  #project .block {
     text-align: center;
   }
-  #blog .block ul {
+  #project .block ul {
     padding-bottom: 40px;
   }
-  #blog .block ul li {
+  #project .block ul li {
     width: 100%;
   }
-  #blog .block ul li h3 {
+  #project .block ul li h3 {
     padding: 0px 0px 30px;
   }
-  #blog .block ul li .blog-img {
+  #project .block ul li .blog-img {
     width: 50%;
   }
-  #blog .block ul li .blog-img img {
+  #project .block ul li .blog-img img {
     width: 100%;
   }
-  #blog .block ul li .blog-img-2 {
+  #project .block ul li .blog-img-2 {
     width: 50%;
   }
-  #blog .block ul li .blog-img-2 img {
+  #project .block ul li .blog-img-2 img {
     width: 100%;
   }
-  #blog .block ul li .content-left {
+  #project .block ul li .content-left {
     padding: 40px 20px 0;
   }
-  #blog .block ul li .content-right {
+  #project .block ul li .content-right {
     padding: 40px 20px 0;
   }
-  #blog .block .btn-more-info {
+  #project .block .btn-more-info {
     float: none;
     margin-top: 30px;
   }
-  #blog .block .btn-more-info:hover {
+  #project .block .btn-more-info:hover {
     border-radius: 10px;
   }
   /*--
-    price Start
+    blog Start
 --*/
-  #price .block p {
+  #blog .block p {
     padding: 30px 0 0;
   }
-  #price .block .pricing-list {
+  #blog .block .pricing-list {
     text-align: left;
   }
   /*--
-    contact-us Start
+    contact-me Start
 --*/
-  #contact-us {
+  #contact-me {
     padding: 60px 0 0;
   }
-  #contact-us .block {
+  #contact-me .block {
     text-align: center;
   }
-  #contact-us .block .title {
+  #contact-me .block .title {
     text-align: left;
   }
-  #contact-us .block a {
+  #contact-me .block a {
     padding: 15px 80px;
     float: inherit;
   }
@@ -207,12 +207,12 @@ px      68    160    252    */
     padding-right: 0px;
   }
   /*--
-    about-us Start
+    about-me Start
 --*/
-  #about-us {
+  #about-me {
     padding: 70px 0;
   }
-  #about-us .block p {
+  #about-me .block p {
     padding: 40px 0px 0px;
   }
   /*--
@@ -225,84 +225,84 @@ px      68    160    252    */
     font-size: 25px;
   }
   /*--
-    blog Start
+    project Start
 --*/
-  #blog .block ul {
+  #project .block ul {
     padding-bottom: 30px;
   }
-  #blog .block ul li {
+  #project .block ul li {
     float: none;
     width: 100%;
     height: 100%;
   }
-  #blog .block ul li .blog-img {
+  #project .block ul li .blog-img {
     float: none;
     width: 100%;
   }
-  #blog .block ul li .blog-img img {
+  #project .block ul li .blog-img img {
     width: 100%;
   }
-  #blog .block ul li .blog-img-2 {
+  #project .block ul li .blog-img-2 {
     float: none;
     width: 100%;
   }
-  #blog .block ul li .blog-img-2 img {
+  #project .block ul li .blog-img-2 img {
     width: 100%;
   }
-  #blog .block ul li .content-right {
-    float: none;
-    width: 100%;
-    padding: 20px 35px;
-  }
-  #blog .block ul li .content-right:after {
-    display: none;
-  }
-  #blog .block ul li .content-left {
+  #project .block ul li .content-right {
     float: none;
     width: 100%;
     padding: 20px 35px;
   }
-  #blog .block ul li .content-left:after {
+  #project .block ul li .content-right:after {
     display: none;
   }
-  #blog .block .btn-more-info {
+  #project .block ul li .content-left {
+    float: none;
+    width: 100%;
+    padding: 20px 35px;
+  }
+  #project .block ul li .content-left:after {
+    display: none;
+  }
+  #project .block .btn-more-info {
     padding: 10px 85px;
   }
-  #blog .block .btn-more-info:hover {
+  #project .block .btn-more-info:hover {
     border-radius: 10px;
   }
   /*--
-    price Start
+    blog Start
 --*/
-  #price .block p {
+  #blog .block p {
     padding: 40px 0px 0px;
   }
-  #price .block .pricing-list {
+  #blog .block .pricing-list {
     text-align: left;
   }
-  #price .block .pricing-list ul li .item {
+  #blog .block .pricing-list ul li .item {
     float: none;
   }
-  #price .block .pricing-list ul li .item .item-title .border-bottom {
+  #blog .block .pricing-list ul li .item .item-title .border-bottom {
     display: none;
   }
-  #price .block .pricing-list ul li .item .item-title span {
+  #blog .block .pricing-list ul li .item .item-title span {
     padding-top: 10px;
     display: block;
     float: none;
   }
-  #price .block .pricing-list .btn {
+  #blog .block .pricing-list .btn {
     float: inherit;
     padding: 10px 100px;
   }
 
   /*--
-    contact-us Start
+    contact-me Start
 --*/
-  #contact-us {
+  #contact-me {
     padding: 60px 0 0;
   }
-  #contact-us .block a {
+  #contact-me .block a {
     width: 100%;
     float: inherit;
   }
