--- a/src/main/resources/static/dev/indexpage/css/main.css
+++ b/src/main/resources/static/dev/indexpage/css/main.css
@@ -2,7 +2,7 @@
  * Copyright (c) 2017 by LiuFa. All rights reserved
  ******************************************************************************/
 
-@font-face{font-family:myfont;src:url(../fonts/ufonts.com_tw-cen-mt.ttf)}
+@font-face{font-family:myfont;src:url(//css.lfdevelopment.cn/www/ufonts.com_tw-cen-mt.ttf)}
 body{font-family:'Microsoft Yahei',verdana,sans-serif;font-size:14px;font-weight:400}
 h1,h2,h3,h4,h5,h6{margin:0;font-family:myfont}
 h1{font-size:36px}
@@ -12,7 +12,7 @@ p{font-size:14px;font-weight:400;line-height:20px;margin:0;font-family:myfont}
 ul{padding:0;margin:0;list-style:none}
 a,a:active,a:focus{text-decoration:none!important;font-size:15px}
 .copyrights{text-indent:-9999px;height:0;line-height:0;font-size:0;overflow:hidden}
-.overlay-effect{content:"";position:absolute;left:0;right:0;bottom:0;top:0;width:100%;height:100%;background:url(../images/overlay-pattern.png) #000;opacity:.3}
+.overlay-effect{content:"";position:absolute;left:0;right:0;bottom:0;top:0;width:100%;height:100%;background:url(//image.lfdevelopment.cn/www/overlay-pattern.png) #000;opacity:.3}
 .heading{text-align:center;font-weight:500;color:#2E2E2E;padding:40px 0;position:relative}
 .heading span{font-size:45px;color:#ff530a;font-weight:600}
 .heading:before{content:"";position:absolute;left:50%;bottom:0;width:140px;height:1px;background:#C8C1B3;margin-left:-70px}
@@ -21,7 +21,7 @@ a,a:active,a:focus{text-decoration:none!important;font-size:15px}
 .before-border{content:"";position:absolute;left:50%;bottom:0;width:140px;height:1px;background:#C8C1B3;margin-left:-70px}
 .transition{-webkit-transition:.3s all;-o-transition:.3s all;transition:.3s all}
 #hero-area{position:relative}
-#hero-area:before{content:"";position:absolute;left:0;right:0;bottom:0;top:0;width:100%;height:100%;background:url(../images/overlay-pattern.png) #000;opacity:.3}
+#hero-area:before{content:"";position:absolute;left:0;right:0;bottom:0;top:0;width:100%;height:100%;background:url(//image.lfdevelopment.cn/www/overlay-pattern.png) #000;opacity:.3}
 nav{z-index:99999;width:100%}
 nav .block{margin-top:-85px;background:#fff;padding:25px 40px 10px 40px;background:rgba(255,255,255,.89)}
 nav .block .navbar-default{border:none;border-radius:0;margin-bottom:0;background:0 0}
@@ -47,8 +47,8 @@ nav .block .navbar-default .navbar-nav>.active>a:before,nav .block .navbar-defau
 #about-me .block p{color:#959595;font-size:16px;line-height:26px;padding:40px 0}
 #about-me .block img{-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%;vertical-align:middle;border:6px solid #f6f6f6}
 #about-me .block img:hover{-webkit-transition:all .3s ease;-moz-transition:all .3s ease;-o-transition:all .3s ease;transition:all .3s ease;text-shadow:0 0 10px #fff;border:6px solid #ddd;box-shadow:0 0 10px rgba(255,255,255,.75)}
-#project{padding-top:75px;padding-bottom:100px;background:url(../images/blog-bg.jpg);background-repeat:no-repeat;background-size:cover;background-attachment:fixed;position:relative}
-#project:before{content:"";position:absolute;left:0;right:0;bottom:0;top:0;width:100%;height:100%;background:url(../images/overlay-pattern.png) #000;opacity:.3}
+#project{padding-top:75px;padding-bottom:100px;background:url(//image.lfdevelopment.cn/www/blog-bg.jpg);background-repeat:no-repeat;background-size:cover;background-attachment:fixed;position:relative}
+#project:before{content:"";position:absolute;left:0;right:0;bottom:0;top:0;width:100%;height:100%;background:url(//image.lfdevelopment.cn/www/overlay-pattern.png) #000;opacity:.3}
 #project .block .heading{color:#fff}
 #project .block ul{padding-top:40px}
 #project .block ul li{overflow:hidden;width:50%;float:left;background:#fff;text-align:center;color:#959595;transform:1s}
@@ -78,8 +78,8 @@ nav .block .navbar-default .navbar-nav>.active>a:before,nav .block .navbar-defau
 #blog .block .pricing-list ul li .item p{padding:12px 0 0;color:#949494}
 #blog .block .pricing-list .btn{padding:10px 105px;border-radius:0;background:0 0;color:#FF4F02;border:1px solid #FF4F02;font-size:15px;text-transform:uppercase;font-weight:600;-webkit-transition:.3s all;-o-transition:.3s all;transition:.3s all}
 #blog .block .pricing-list .btn:hover{background:#ff530a;color:#fff}
-#about{padding:100px 0;text-align:center;background:url(../images/subscribe-bg.jpg);background-repeat:no-repeat;background-attachment:fixed;background-position:center;background-size:cover;position:relative}
-#about:before{content:"";position:absolute;left:0;right:0;bottom:0;top:0;width:100%;height:100%;background:url(../images/overlay-pattern.png) #000;opacity:.3}
+#about{padding:100px 0;text-align:center;background:url(//image.lfdevelopment.cn/www/subscribe-bg.jpg);background-repeat:no-repeat;background-attachment:fixed;background-position:center;background-size:cover;position:relative}
+#about:before{content:"";position:absolute;left:0;right:0;bottom:0;top:0;width:100%;height:100%;background:url(//image.lfdevelopment.cn/www/overlay-pattern.png) #000;opacity:.3}
 #about .block h1.heading{color:#fff}
 #about .block p{padding:25px 0;color:#fff;font-size:18px}
 #about .block .form-control{width:450px;background:#fff;opacity:.9;border:none;height:65px;border-radius:0;font-size:15px}
