--- a/src/main/resources/static/dev/indexpage/css/main.css
+++ b/src/main/resources/static/dev/indexpage/css/main.css
@@ -85,7 +85,7 @@ nav .block .navbar-default .navbar-nav>.active>a:before,nav .block .navbar-defau
 #about .block .form-control{width:450px;background:#fff;opacity:.9;border:none;height:65px;border-radius:0;font-size:15px}
 #about .block .form-inline{margin-bottom:20px}
 #about .block .input-group-addon{padding:0;border:none;background:0 0}
-#about .block .input-group-addon a{width:200px;height:65px;line-height:52px;border:none;border-radius:0;background:#7EC3BB;color:#FF4F02;font-weight:600;font-size:16px;letter-spacing:2px;text-transform:uppercase;-webkit-transition:.3s all;-o-transition:.3s all;transition:.3s all}
+#about .block .input-group-addon a{width:200px;height:65px;line-height:52px;border:none;border-radius:0;background:#7EC3BB;color: #fbffff;font-weight:600;font-size:16px;letter-spacing:2px;text-transform:uppercase;-webkit-transition:.3s all;-o-transition:.3s all;transition:.3s all}
 #about .block .input-group-addon a:hover{background:#69a8a1}
 #contact-me{padding:70px 0}
 #contact-me .block .title{padding:20px 0}
